# SonyHeadphonesClient

./: .clang-tidy  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakeSettings.json  DetectGitInfo.cmake  DetectPlatform.cmake  README.md
.github/workflows/: cmake.yml  docs.yml  emscripten.yml  xcodebuild.yml
Client/: BluetoothWrapper.cpp  BluetoothWrapper.h  ByteMagic.cpp  ByteMagic.h  CMakeLists.txt  CommandSerializer.cpp  CommandSerializer.h  Constants.h  CrossPlatformGUI.cpp  CrossPlatformGUI.h  Headphones.cpp  Headphones.h  IBluetoothConnector.h  SingleInstanceFuture.h  TimedMessageQueue.cpp  TimedMessageQueue.h
Client/contrib/fonts/: CascadiaCode.cpp  build.sh
Client/contrib/tomlplusplus/cmake/: project-is-top-level.cmake
Client/linux/: LinuxBluetoothConnector.cpp  LinuxGUI.cpp  LinuxGUI.h
Client/macos/: MacOSGUI.mm  main.mm
Client/src/: App.cpp  App.h  BluetoothWrapper.cpp  BluetoothWrapper.h  ByteMagic.h  CommandSerializer.cpp  CommandSerializer.h  Constants.h  Headphones.cpp  Headphones.h  SingleInstanceFuture.h
Client/src/platform/: IBluetoothConnector.h
Client/src/platform/linux/: LinuxBluetoothConnector.h  main.cpp
Client/src/platform/macos/: Info.plist  MacOSBluetoothConnector.mm  main.mm
Client/src/platform/windows/: WindowsBluetoothConnector.cpp  WindowsBluetoothConnector.h  app.manifest  main.cpp
Client/windows/: WindowsBluetoothConnector.cpp  WindowsBluetoothConnector.h  WindowsGUI.cpp  WindowsGUI.h  main.cpp
client/: CMakeLists.txt  Client.cpp  CousineRegular.cpp  Main.c  Main.cpp  README.md  SDLMain.cpp
client/Fonts/: CousineRegular.c  CousineRegular.h  PlexSansIcon.c  PlexSansIcon.h
client/Platform/: CMakeLists.txt  Platform.hpp
client/Platform/Emscripten/: CMakeLists.txt  PlatformEmscripten.cpp  index.html  manifest.json  sw.js
client/Platform/Linux/: CMakeLists.txt  PlatformLinux.cpp
client/Platform/Windows/: CMakeLists.txt  PlatformWindows.cpp
client/emscripten/: index.html
contrib/: CMakeLists.txt  README.md
docs/: README.md  packet-capture.md
docs/device-support/: WF-1000XM5.md  WF-C510.md  WF-LS900N.md  WH-1000XM5.md  WH-1000XM6.md  WH-CH720N.md
libmdr/: CMakeLists.txt  Command.cpp  Command.hpp  Constants.hpp  Protocol.cpp  Protocol.hpp  ProtocolV2.hpp  ProtocolV2T1.cpp  ProtocolV2T1.hpp  ProtocolV2T2.cpp  ProtocolV2T2.hpp  README  README.md  generate_all.sh
libmdr/include/: CMakeLists.txt
libmdr/include/mdr/: ConnectionLinux.h  Headphones.h  Headphones.hpp  LinuxPlatform.h  Protocol.hpp  ProtocolV2T1.hpp  ProtocolV2T2.hpp  WindowsPlatform.h
libmdr/include/mdr-c/: Base.h  Connection.h  Headphones.h
libmdr/include/mdr-c/Platform/: PlatformEmscripten.h  PlatformLinux.h  PlatformWindows.h
libmdr/include/mdr-c/Platform/Linux/: LinuxPlatform.h
libmdr/include/mdr-c/Platform/Windows/: WindowsPlatform.h
libmdr/include/mdr/Platform/Linux/: LinuxPlatform.hpp
libmdr/include/mdr/Platform/Windows/: WindowsPlatform.hpp
libmdr/src/: CMakeLists.txt  Command.cpp  Command.hpp  Headphones.cpp  Headphones.hpp  HeadphonesV2.cpp  HeadphonesV2T1.cpp  HeadphonesV2T2.cpp  Protocol.hpp  ProtocolV2.hpp  ProtocolV2T1.cpp  ProtocolV2T1.hpp  ProtocolV2T2.cpp  ProtocolV2T2.hpp
libmdr/src/Platform/: CMakeLists.txt  Platform.hpp
libmdr/src/Platform/Emscripten/: CMakeLists.txt  PlatformEmscripten.cpp
libmdr/src/Platform/Linux/: CMakeLists.txt  DBusHelper.cpp  DBusHelper.hpp  LinuxPlatform.cpp  PlatformLinux.cpp
libmdr/src/Platform/Windows/: CMakeLists.txt  PlatformWindows.cpp  WindowsPlatform.cpp
src/: App.cpp  App.h  BluetoothWrapper.cpp  BluetoothWrapper.h  ByteMagic.h  CommandSerializer.cpp  CommandSerializer.h  Constants.h  Headphones.cpp  Headphones.h  Main.cpp  Protocol.h  ProtocolV2T1.h  ProtocolV2T2.h  main.cpp
src/platform/: IBluetoothConnector.h
src/platform/linux/: DBusHelper.cpp  LinuxBluetoothConnector.cpp  main.cpp
src/platform/macos/: MacOSBluetoothConnector.h  MacOSBluetoothConnector.mm  main.mm
src/platform/windows/: ImmersiveColor.h  WindowsBluetoothConnector.cpp  main.cpp
tooling/: BinaryEmbed.cpp  CMakeLists.txt  Codegen.hpp  EnumCodegen.cpp  README  README.md  SerializationCodegen.cpp  TraitsCodegen.cpp  ValidationCodegen.cpp
